<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#143F95"
    tools:context=".Activitylist">

    <ListView
        android:id="@+id/listacontactos"
        android:layout_width="367dp"
        android:layout_height="386dp"
        android:layout_marginTop="10dp"
        android:background="#1E58AF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbuscar" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:onClick="Iringcon"
        android:text="@string/btnatras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/txtbuscar"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_marginTop="1dp"
        android:background="#F5FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/btncompcon"
        android:layout_width="171dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:onClick="Compcon"
        android:text="@string/btncompartircon"
        app:layout_constraintEnd_toStartOf="@+id/btnverimagen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listacontactos" />

    <Button
        android:id="@+id/btnverimagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:onClick="Verim"
        android:text="@string/btnverimagen"
        app:layout_constraintBottom_toTopOf="@+id/btnactcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listacontactos"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/btneliminarcont"
        android:layout_width="164dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="68dp"
        android:onClick="Elmc"
        android:text="@string/btneliminarcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnactcon"
        android:layout_width="145dp"
        android:layout_height="62dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="68dp"
        android:onClick="Actc"
        android:text="@string/btnactualizarcontacto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>